--- a/.depcheckrc
+++ b/.depcheckrc
@@ -1,1 +1,1 @@
-ignores: ["cpu-arch", "function-exec-sync"]
+ignores: ["node-version-use", "ts-dev-stack", "@biomejs/biome", "cpu-arch", "function-exec-sync"]
